grammar/geformt.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { definition: peg$parsedefinition },
      peg$startRuleFunction  = peg$parsedefinition,

      peg$c0 = function(complex, opt) {	var definition={options: []};
       			definition.options.push(complex);
       			for (var i=0;i&lt;opt.length;i++){
       				definition.options.push(opt[i][1]);
       			}
       			return definition;
      		},
      peg$c1 = function(gesture, gestures) {	var complex = {relation:null,gestures:[]};
      			complex.gestures.push(gesture);
      			for(var i=0;i&lt;gestures.length;i++){		
      				complex.gestures.push(gestures[i][1]);
      				gestures[i][1].operation=gestures[i][0];
      			}
      		return complex;		
      		},
      peg$c2 = "[",
      peg$c3 = peg$literalExpectation("[", false),
      peg$c4 = "]",
      peg$c5 = peg$literalExpectation("]", false),
      peg$c6 = function(rel, gesture, gestures) {	var complex = {relation:rel,gestures:[]};
      			complex.gestures.push(gesture);
      			for(var i=0;i&lt;gestures.length;i++){
      				complex.gestures.push(gestures[i][1]);
      				gestures[i][1].operation=gestures[i][0];
      			}
      			return complex;
      		},
      peg$c7 = "(",
      peg$c8 = peg$literalExpectation("(", false),
      peg$c9 = ",",
      peg$c10 = peg$literalExpectation(",", false),
      peg$c11 = ")",
      peg$c12 = peg$literalExpectation(")", false),
      peg$c13 = function(func, afo, afos) {	var gesture={funct:func,atomfocus: []};
      			gesture.atomfocus.push(afo);
      			for(var i=0;i&lt;afos.length;i++){
      				gesture.atomfocus.push(afos[i][1]);
      			}
      			return gesture;
      		},
      peg$c14 = function(afo, afos) {	var gesture= {funct:null,atomfocus: []};
      			gesture.atomfocus.push(afo);
      			for(var i=0;i&lt;afos.length;i++){
      				gesture.atomfocus.push(afos[i][1]);
      			}
      			return gesture;
      		},
      peg$c15 = "CROSS",
      peg$c16 = peg$literalExpectation("CROSS", false),
      peg$c17 = function() {return GeForMT.RELATION_TYPES.CROSS;},
      peg$c18 = "JOIN",
      peg$c19 = peg$literalExpectation("JOIN", false),
      peg$c20 = function() {return GeForMT.RELATION_TYPES.JOIN;},
      peg$c21 = "SYNC",
      peg$c22 = peg$literalExpectation("SYNC", false),
      peg$c23 = function() {return GeForMT.RELATION_TYPES.SYNC;},
      peg$c24 = "SPLIT",
      peg$c25 = peg$literalExpectation("SPLIT", false),
      peg$c26 = function() {return GeForMT.RELATION_TYPES.SPLIT;},
      peg$c27 = "CONNECT_START",
      peg$c28 = peg$literalExpectation("CONNECT_START", false),
      peg$c29 = function() {return GeForMT.RELATION_TYPES.CONNECT_START;},
      peg$c30 = "CONNECT_END",
      peg$c31 = peg$literalExpectation("CONNECT_END", false),
      peg$c32 = function() {return GeForMT.RELATION_TYPES.CONNECT_END;},
      peg$c33 = "AMONG",
      peg$c34 = peg$literalExpectation("AMONG", false),
      peg$c35 = function() {return GeForMT.RELATION_TYPES.AMONG;},
      peg$c36 = "ASIDE",
      peg$c37 = peg$literalExpectation("ASIDE", false),
      peg$c38 = function() {return GeForMT.RELATION_TYPES.ASIDE;},
      peg$c39 = "CLOSE",
      peg$c40 = peg$literalExpectation("CLOSE", false),
      peg$c41 = function() {return GeForMT.RELATION_TYPES.CLOSE;},
      peg$c42 = function(atom, focus) {	return {atom:atom,focuslist:focus};},
      peg$c43 = function(atom) {	return {atom:atom,focuslist:[]};},
      peg$c44 = function(focus, list) {	var focuslist=[];
      			focuslist.push(focus);
      			for(var i=0;i&lt;list.length;i++){
      				focuslist.push(list[i][1]);
      			}
      			return focuslist;
      		},
      peg$c45 = /^[A-Za-z0-9#.:=|[\]*_\-]/,
      peg$c46 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "#", ".", ":", "=", "|", "[", "]", "*", "_", "-"], false, false),
      peg$c47 = function(focus) {	return focus.join("");},
      peg$c48 = "F",
      peg$c49 = peg$literalExpectation("F", false),
      peg$c50 = function(num, functionType) {	var func = {type:GeForMT.FUNCTION_TYPES.FINGER,number:null};
      			if(typeof num != 'undefined') func['number']=num;
      			return func;
      		},
      peg$c51 = "H",
      peg$c52 = peg$literalExpectation("H", false),
      peg$c53 = function(num, functionType) {	var func = {type:GeForMT.FUNCTION_TYPES.HAND,number:null};
      			if(typeof num != 'undefined') func['number']=num;
      			return func;
      		},
      peg$c54 = "B",
      peg$c55 = peg$literalExpectation("B", false),
      peg$c56 = function(num, functionType) {	var func = {type:GeForMT.FUNCTION_TYPES.BLOB,number:null};
      			if(typeof num != 'undefined') func['number']=num;
      			return func;
      		},
      peg$c57 = "*",
      peg$c58 = peg$literalExpectation("*", false),
      peg$c59 = function() {  return GeForMT.OPERATION_TYPES.ASTERISK;},
      peg$c60 = "+",
      peg$c61 = peg$literalExpectation("+", false),
      peg$c62 = function() {  return GeForMT.OPERATION_TYPES.PLUS;},
      peg$c63 = function() {  return GeForMT.OPERATION_TYPES.COMMA;},
      peg$c64 = ";",
      peg$c65 = peg$literalExpectation(";", false),
      peg$c66 = function() {  return GeForMT.OPERATION_TYPES.SEMICOLON;},
      peg$c67 = "|",
      peg$c68 = peg$literalExpectation("|", false),
      peg$c69 = function() {  return GeForMT.OPERATION_TYPES.OPTION;},
      peg$c70 = function(identifier) {	var atom = {type:identifier};
      			return atom;
      		},
      peg$c71 = "_",
      peg$c72 = peg$literalExpectation("_", false),
      peg$c73 = function(vector, directionType) {	var atom={type: vector, direction: null};
      			if(typeof directionType != 'undefined') 
      				atom['direction']=directionType[1];
      			return atom;
      		},
      peg$c74 = function(shape, directionType, rotationType) {	var atom={type: shape, direction: null, rotation: null};
      			if(typeof directionType != 'undefined')
      				atom['direction']=directionType[1];
      			if(typeof rotationType != 'undefined') 
      				atom['rotation']=rotationType[1];
      			return atom;
      		},
      peg$c75 = "MOVE",
      peg$c76 = peg$literalExpectation("MOVE", false),
      peg$c77 = function() {return GeForMT.CONTACT_TYPES.MOVE;},
      peg$c78 = "POINT",
      peg$c79 = peg$literalExpectation("POINT", false),
      peg$c80 = function() {return GeForMT.CONTACT_TYPES.POINT;},
      peg$c81 = "DEPOINT",
      peg$c82 = peg$literalExpectation("DEPOINT", false),
      peg$c83 = function() {return GeForMT.CONTACT_TYPES.DEPOINT;},
      peg$c84 = "HOLD",
      peg$c85 = peg$literalExpectation("HOLD", false),
      peg$c86 = function() {return GeForMT.CONTACT_TYPES.HOLD;},
      peg$c87 = "LINE",
      peg$c88 = peg$literalExpectation("LINE", false),
      peg$c89 = function() {return GeForMT.VECTOR_TYPES.LINE;},
      peg$c90 = "CIRCLE",
      peg$c91 = peg$literalExpectation("CIRCLE", false),
      peg$c92 = function() {return GeForMT.SHAPE_TYPES.CIRCLE;},
      peg$c93 = "SEMICIRCLE",
      peg$c94 = peg$literalExpectation("SEMICIRCLE", false),
      peg$c95 = function() {return GeForMT.SHAPE_TYPES.SEMICIRCLE;},
      peg$c96 = "NORTH",
      peg$c97 = peg$literalExpectation("NORTH", false),
      peg$c98 = function() {return GeForMT.DIRECTION_TYPES.NORTH;},
      peg$c99 = "NORTHEAST",
      peg$c100 = peg$literalExpectation("NORTHEAST", false),
      peg$c101 = function() {return GeForMT.DIRECTION_TYPES.NORTHEAST;},
      peg$c102 = "EAST",
      peg$c103 = peg$literalExpectation("EAST", false),
      peg$c104 = function() {return GeForMT.DIRECTION_TYPES.EAST;},
      peg$c105 = "SOUTHEAST",
      peg$c106 = peg$literalExpectation("SOUTHEAST", false),
      peg$c107 = function() {return GeForMT.DIRECTION_TYPES.SOUTHEAST;},
      peg$c108 = "SOUTH",
      peg$c109 = peg$literalExpectation("SOUTH", false),
      peg$c110 = function() {return GeForMT.DIRECTION_TYPES.SOUTH;},
      peg$c111 = "SOUTHWEST",
      peg$c112 = peg$literalExpectation("SOUTHWEST", false),
      peg$c113 = function() {return GeForMT.DIRECTION_TYPES.SOUTHWEST;},
      peg$c114 = "WEST",
      peg$c115 = peg$literalExpectation("WEST", false),
      peg$c116 = function() {return GeForMT.DIRECTION_TYPES.WEST;},
      peg$c117 = "NORTHWEST",
      peg$c118 = peg$literalExpectation("NORTHWEST", false),
      peg$c119 = function() {return GeForMT.DIRECTION_TYPES.NORTHWEST;},
      peg$c120 = "NE",
      peg$c121 = peg$literalExpectation("NE", false),
      peg$c122 = "SE",
      peg$c123 = peg$literalExpectation("SE", false),
      peg$c124 = "SW",
      peg$c125 = peg$literalExpectation("SW", false),
      peg$c126 = "NW",
      peg$c127 = peg$literalExpectation("NW", false),
      peg$c128 = "N&deg;",
      peg$c129 = peg$literalExpectation("N&deg;", false),
      peg$c130 = function() {return GeForMT.DIRECTION_TYPES.TEND_NORTH;},
      peg$c131 = "N",
      peg$c132 = peg$literalExpectation("N", false),
      peg$c133 = "E&deg;",
      peg$c134 = peg$literalExpectation("E&deg;", false),
      peg$c135 = function() {return GeForMT.DIRECTION_TYPES.TEND_EAST;},
      peg$c136 = "E",
      peg$c137 = peg$literalExpectation("E", false),
      peg$c138 = "W&deg;",
      peg$c139 = peg$literalExpectation("W&deg;", false),
      peg$c140 = function() {return GeForMT.DIRECTION_TYPES.TEND_WEST;},
      peg$c141 = "W",
      peg$c142 = peg$literalExpectation("W", false),
      peg$c143 = "S&deg;",
      peg$c144 = peg$literalExpectation("S&deg;", false),
      peg$c145 = function() {return GeForMT.DIRECTION_TYPES.TEND_SOUTH;},
      peg$c146 = "S",
      peg$c147 = peg$literalExpectation("S", false),
      peg$c148 = "CLOCKWISE",
      peg$c149 = peg$literalExpectation("CLOCKWISE", false),
      peg$c150 = function() {return GeForMT.ROTATION_TYPES.CLOCKWISE;},
      peg$c151 = "CW",
      peg$c152 = peg$literalExpectation("CW", false),
      peg$c153 = "COUNTERCLOCKWISE",
      peg$c154 = peg$literalExpectation("COUNTERCLOCKWISE", false),
      peg$c155 = function() {return GeForMT.ROTATION_TYPES.COUNTERCLOCKWISE;},
      peg$c156 = "CCW",
      peg$c157 = peg$literalExpectation("CCW", false),
      peg$c158 = /^[1-9]/,
      peg$c159 = peg$classExpectation([["1", "9"]], false, false),
      peg$c160 = /^[0-9]/,
      peg$c161 = peg$classExpectation([["0", "9"]], false, false),
      peg$c162 = function(first_digit, last_digits) {	var digits=String(first_digit)+String(last_digits.join(""));
      			return parseInt(digits,10);
      		},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsedefinition() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsecomplex();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseoption();
      if (s4 !== peg$FAILED) {
        s5 = peg$parsecomplex();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseoption();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsecomplex();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecomplex() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parsegesture();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseoperator();
      if (s4 !== peg$FAILED) {
        s5 = peg$parsegesture();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseoperator();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsegesture();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parserelation();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 91) {
          s2 = peg$c2;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsegesture();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$currPos;
            s6 = peg$parseoperator();
            if (s6 !== peg$FAILED) {
              s7 = peg$parsegesture();
              if (s7 !== peg$FAILED) {
                s6 = [s6, s7];
                s5 = s6;
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$currPos;
              s6 = peg$parseoperator();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsegesture();
                if (s7 !== peg$FAILED) {
                  s6 = [s6, s7];
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 93) {
                s5 = peg$c4;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c5); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s1, s3, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsegesture() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
